--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
   },
   "dependencies": {
     "easyvk": "^2.6.2",
-    "mysql2": "^2.1.0",
-    "socket.io": "^2.3.0"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.2.1",
+    "socket.io": "^2.3.0",
+    "socketio-jwt": "^4.6.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.2",
+    "@types/pg": "^7.14.3",
     "@types/socket.io": "^2.1.4",
+    "@types/socketio-jwt": "^0.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0",
     "nodemon": "^2.0.3",
     "typescript": "^3.8.3"
   }
