--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "dev": "nodemon bin/dist/index.js"
   },
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "easyvk": "^2.6.2",
     "jsonwebtoken": "^8.5.1",
+    "koa": "^2.12.0",
+    "koa-router": "^8.0.8",
     "pg": "^8.2.1",
     "socket.io": "^2.3.0",
     "socketio-jwt": "^4.6.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/koa": "^2.11.3",
+    "@types/koa-router": "^7.4.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.2",
     "@types/pg": "^7.14.3",
