--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "projectT",
+  "name": "projectt",
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon bin/dist/index.js"
+    "dev": "nodemon bin/dist/index.js",
+    "debug": "tsc & nodemon --inspect dist/index.js",
+    "test": "dir && dir src"
   },
   "dependencies": {
     "crypto-js": "^4.0.0",
@@ -31,7 +33,8 @@
     "@types/socketio-jwt": "^0.0.1",
     "chai": "^4.2.0",
     "mocha": "^7.2.0",
-    "nodemon": "^2.0.3",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
     "typescript": "^3.8.3"
   }
 }
