--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-cors": "^0.0.16",
     "koa-router": "^8.0.8",
     "pg": "^8.2.1",
     "socket.io": "^2.3.0",
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-cors": "^0.0.0",
     "@types/koa-router": "^7.4.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.2",
