--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-cors": "^0.0.0",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.2",
@@ -34,6 +35,7 @@
     "@types/socket.io": "^2.1.4",
     "@types/socketio-jwt": "^0.0.1",
     "chai": "^4.2.0",
+    "koa-logger": "^3.2.1",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
